# localFile_cloudSync_Server

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.yaml  config.yaml.example  progress_heartbeat.sh
.github/workflows/: ci.yml
app/: README.md  app.py  pyproject.toml  web.py
app/app/cli/: main.py
app/app/core/: config.py  last_cmd.py  log_tail.py  logging_setup.py
app/app/providers/feishu_legacy/: __init__.py  db.py  feishu_client.py  index_generator.py  sync_engine.py
app/app/web/: api.py  main.py  pages.py  security.py
app/localfile_cloudsync_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/localfilesync/: __init__.py
app/localfilesync/cli/: __init__.py  main.py
app/localfilesync/web/: __init__.py  main.py
app/tests/: test_api_health.py  test_config_loading.py  test_config_scope.py  test_event_callback.py  test_log_tail.py  test_sync_direction_bidirectional.py
deploy/systemd/: localfile-cloudsync.service
docs/: CHANGELOG_TEMPLATE.md  DEPLOYMENT_GUIDE_ZH.md  DOCS_INDEX_ZH.md  ENGINEERING_ROADMAP_ZH.md  FEISHU_API_MAPPING_ZH.md  M1_SWITCH.md  OPENCLAW_AGENT_MEMORY_ZH.md  RELEASE_PLAYBOOK_ZH.md  RELEASE_SMOKE_CHECKLIST.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md
docs/screenshots/: README.md
docs/test_reports/: 2h_gate_TEST_REPORT_20260223_2053.md  LCS-QA-FIX-20260223-02.md  QA_LIVE_PROGRESS.md
feishu_sync_service_backup_20260221_1509/: README.md  app.py  config.yaml  feishu_client.py  openclaw-feishu-sync.service  sync_engine.py
feishu_sync_service_backup_20260221_1509/data/: service.db
feishu_sync_service_backup_20260221_1509/docs/: 01_系统设计文档.md  02_实施TODO.md
feishu_sync_service_backup_20260221_1509/logs/: sync-20260221.jsonl
runtime/: last_cmd.txt  last_run_once.json  progress.json  service.db  web_home.html  web_home_cn.html
scripts/: overnight_autopilot.sh  release.sh  rollback_release.sh  switch_m1_service.sh
