[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localfile-cloudsync-server"
version = "0.2.2"
description = "Local↔Feishu Drive sync service (user_access only) with CLI + Web UI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=2.0",
  "pycryptodome>=3.20",
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.0",
  "typer>=0.12",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0.12.20250516",
  "types-requests>=2.32.0.20250602",
]

[project.scripts]
localfilesync-cli = "localfilesync.cli.main:main"
localfilesync-web = "localfilesync.web.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "localfilesync*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
]
ignore = [
  "E501",
  "F401",
  "F541",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
exclude = [
  "^venv/",
  "^runtime/",
  "^feishu_sync_service_backup_20260221_1509/",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
